--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Ver Facturas</a>
+                        <a class="nav-link" href="/listarfacturas">Ver Facturas</a>
                     </li>
 
                 </ul>
