--- a/src/views/facturas.ejs
+++ b/src/views/facturas.ejs
@@ -1,5 +1,19 @@
 <%- include('partials/header.ejs') -%>
 
+<h1>Ver facturas</h1>
+<form action="/consultarFactura" method="post">
+    <div class="container" style="display: flex; text-align: center">
+        <div class="gap">
+            <input type="date" name="fecha1" class="form-control">
+        </div>
+        <div class="gap">
+            <input type="date" name="fecha2" class="form-control">
+        </div>
+        <div>
+            <button class="btn btn-primary" type="submit">Enviar</button>
+        </div>
+    </div>
+</form>
 
 <table class="table" id="tablaFacturas">
     <thead>
@@ -26,22 +40,35 @@
                 <td><%= todasFacturas.Fecha %></td>
                 <td><%= todasFacturas.Hora %></td>
                 <td>
-                        <a  class="btn btn-primary" href="/datosfactura/<%= todasFacturas.idFactura %>">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                            </svg>
-                        </a>
+                    <a class="btn btn-primary" href="/datosfactura/<%= todasFacturas.idFactura %>">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-search" viewBox="0 0 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                        </svg>
+                    </a>
                 </td>
             </tr>
         <% }); %>
 
+        <% if (contador) { %>
+            <tr>
+                <td></td>
+                <td></td>
+                <td>Total Entradas</td>
+                <td><%= contadorE.contador %></td>
+                <td>Total Facturas:</td>
+                <td><%= contador.contador %> </td>
+            </tr>
+        <% } else { %>
+
+        <% } %>
+
     <% }else { %>
 
     <% } %>
-
-
     </tbody>
 </table>
+
 
 <div class="container" style="padding-top: 25px">
 
